src/test/resources/org/nest/nestml/_cocos/valid/assignmentToAlias.nestml
neuron A:
  state:
    function a ms = 15.0
  end

  update:
    aa ms
    aa = a
  end
end
