src/test/resources/org/nest/nestml/_cocos/invalid/illegalAssignments.nestml
neuron test:
  parameters:
    d ms = 20 ms
  end

  state:
    function c ms = 15.0
  end

  internals:
   a real = 0
  end

  equations:
    function b real = 0
  end

  update:
    a = 2. # error
    b = 2. # error
    c = 12 # error
    d = 4 ms #error
  end
end